<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <data>-->
<!--        <variable-->
<!--            name=""-->
<!--            type="" />-->
<!--    </data>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context = ".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="20dp">

            <TextView
                android:id="@+id/workingTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/resultTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/workingTV"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            style="@style/buttonRow">
            
            <Button
                style="@style/buttonNumber"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:layout_weight="2"
                android:onClick="allClearAction"
                android:backgroundTint="@color/red">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:drawableStart="@drawable/baseline_backspace_24"
                android:backgroundTint="@color/red"
                android:drawableTint="@color/white"
                android:onClick="onBackAction"
                android:padding="100px">
            </Button>

            <Button
                style="@style/buttonOperator"
                android:text="@string/mult"
                android:onClick="onOperationAction">
            </Button>

        </LinearLayout>

        <LinearLayout
            style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/_7"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:text="@string/_8"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:text="@string/_9"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonOperator"
                android:text="@string/div"
                android:onClick="onOperationAction">
            </Button>

        </LinearLayout>

        <LinearLayout
            style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/_4"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:text="@string/_5"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:text="@string/_6"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonOperator"
                android:text="@string/sub"
                android:onClick="onOperationAction">
            </Button>

        </LinearLayout>

        <LinearLayout
            style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/_1"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:text="@string/_2"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:text="@string/_3"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonOperator"
                android:text="@string/add"
                android:onClick="onOperationAction">
            </Button>

        </LinearLayout>

        <LinearLayout
            style="@style/buttonRow">

            <Button
                style="@style/buttonNumber"
                android:text="@string/_0"
                android:onClick="onNumberAction">
            </Button>

            <Button
                style="@style/buttonNumber"
                android:text="@string/dot">
            </Button>

            <Button
                style="@style/buttonOperator"
                android:text="@string/equal"
                android:onClick="onEqualAction"
                android:layout_weight="2">
            </Button>

        </LinearLayout>

    </LinearLayout>
</layout>